fixed spacing on image gallery and main image redo

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1177,6 +1177,7 @@ a:focus,.focus a{
 							align-items: space-between;
 							position:relative;
 							bottom: auto;
+							margin-top: 10px;
 							li{
 								float: none !important;
 						    	margin-right: 0 !important;
